--- a/css/font.css
+++ b/css/font.css
@@ -26,15 +26,17 @@
 
 @font-face {
     font-family: 'Poppins';
-    src: url('../fonts/fonts/index.htmlPoppins-Bold.eot');
-    src: url('../fonts/fonts/index.htmlPoppins-Bold.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/fonts/index.htmlPoppins-Bold.woff2') format('woff2'),
-        url('../fonts/fonts/index.htmlPoppins-Bold.woff') format('woff'),
-        url('../fonts/fonts/index.htmlPoppins-Bold.svg#Poppins-Bold') format('svg');
+    src: url('../fonts/Poppins-Bold.eot');
+    src: url('../fonts/Poppins-Bold.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Poppins-Bold.woff2') format('woff2'),
+        url('../fonts/Poppins-Bold.woff') format('woff'),
+        url('../fonts/Poppins-Bold.svg#Poppins-Bold') format('svg');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
 }
+
+
 
 
 @font-face {
