--- a/css/style.css
+++ b/css/style.css
@@ -180,8 +180,10 @@ a {
 
 }
 /* section2 */
+/* top part */
 .container2{
     margin-top: 90px;
+
     
 }
 .bg-image-section{
@@ -271,4 +273,54 @@ a {
     line-height: 19px;
     height: 62px;
 
+}
+/* botton part */
+
+.container3{
+    background-color: #F8F8F8;
+    width: 1366px;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+ 
+}
+
+.left-block-2{
+    width: 432px;
+
+}
+.block2-h2 {
+    color: #5863F8;
+    font-size: 14px;
+    font-family: 'Poppins';
+    font-weight: bold;
+
+}
+.trust{
+    font-size: 34px;
+    font-family: 'Poppins';
+    font-weight: 600;
+    line-height: 56px;
+
+}
+.left-block2-flex{
+    display: flex;
+    margin-top: 34px;
+    margin-bottom:20px;
+}
+.left-block2-flex span{
+    margin-left: 19px;
+    font-size: 18px;
+    font-family: 'Poppins';
+    font-weight: 600;
+
+}
+.review{
+    font-size: 14px;
+    font-family: 'Poppins';
+    font-weight: 500;
+
+}
+.right-block-2{
+    margin-left: 212px;
 }
