--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,6 @@ a {
     font-family: 'Poppins';
     font-weight: 500;
     font-size: 14px;
-    height: 88px;
     line-height: 21px;
 
 }
@@ -196,18 +195,18 @@ a {
 /* top part */
 .container2{
     margin-top: 90px;
+    
 
     
 }
 .bg-image-section{
     background-image: url('../images/group.jpg');
-    height: 612px;
+    /* height: 612px; */
     width: 100%;
+    height: auto;
     background-repeat: no-repeat;
     background-size: cover;
-    /* display: flex;
-    justify-content: space-between;
-    align-items: center; */
+    padding-bottom: 30px;
 
 
 }
@@ -351,6 +350,9 @@ a {
 }
 .right-block-2{
     margin-left: 212px;
+    max-width: 583px;
+    width: 100%;
+    margin: auto;
 }
 /* section3 */
 .section3{
